# privacy-program

./: .gitignore  .prettierignore  Anchor.toml  BUILD_PLAN.md  Cargo.toml  DEPLOYMENT.md  PRIVACY_CASH_VS_VEILO_COMPARISON.md  PRIVATE_SWAPS.md  README.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  new_test_content.txt  package.json  suggested_merkle_tree_approach.txt  test-token-mint.json  tsconfig.json
docs/: AUDIT-001-FIX.md  AUDIT-001-SUMMARY.md  AUDIT-002-RESOLUTION.md  AUDIT-003-FIX.md  AUDIT-004-FIX.md  AUDIT-005-FIX.md  AUDIT-006-FIX.md  NOTE_MANAGEMENT.md  POOL_LIMITATIONS.md  SECURITY_AUDIT.md  SECURITY_CHECKLIST.md  TREE_MONITORING.md
programs/privacy-pool/: Cargo.toml
programs/privacy-pool/src/: groth16.rs  lib.rs  merkle_tree.rs  swap.rs  verifier.rs  vk_constants.rs  zk.rs
tests/: amm-v4-pool-helper.ts  audit-001-relayer-binding.test.ts  audit-003-private-transfer-fee.test.ts  audit-005-token-ownership.test.ts  backend-example.ts  bk2.ts  jupiter-swap.test.ts  maintest.backup.ts  merkle-tree-simulation.test.ts  multi-tree.test.ts  note-ciphers.test.ts  note-manager.example.ts  privacy-pool-spl.test.ts  privacy-pool.js  privacy-pool.test.ts  privacy-pool.ts  raydium-amm-swap-jup.test.ts  raydium-amm-swap-usd1.test.ts  raydium-amm-swap-usdt.test.ts  raydium-amm-swap-various-jup.test.ts  raydium-amm-swap-various-jup.test.ts.bak  raydium-amm-swap-various.test.ts  raydium-amm-swap.test.ts  raydium-cpmm-swap.test.ts  spltest.backup.ts  test-helpers.ts
tests/helpers/: combine-multiple-notes-example.ts  note-selector-scale-test.ts  note-selector.test.ts  note-selector.ts  note-storage.ts  withdrawal-example.ts
tests/utils/: cpmm.ts
tests/utils/jupiter/: jupiter-swap-service.ts
tests/utils/raydium/: raydium-amm-service.ts
