[workspace]
resolver = "2"

members = [
    "programs/*",
]

[programs.localnet]
privacy_pool = "G7m7QCf2m6VsaDs7GJC9wMmxCiWxmAjKN6BhakkWYi32"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
