[package]
name = "privacy-pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privacy_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = []
# Anchor expects the feature name `cpi`, but we don't need to
# enable any extra features on anchor-lang itself.
cpi = []
# For now this just toggles the verify_withdraw_proof stub variant.
zk-verify = []

# Required by Anchor CLI to generate IDL/types
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
solana-program = "1.18.0"