[package]
name = "privacy-pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privacy_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = []
# Anchor expects the feature name `cpi`, but we don't need to
# enable any extra features on anchor-lang itself.
cpi = []
# For now this just toggles the verify_withdraw_proof stub variant.
zk-verify = []

# Required by Anchor CLI to generate IDL/types
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }

# Poseidon hasher used by the Merkle tree
light-hasher = { version = "5", default-features = false }
bytemuck     = { version = "1.15", features = ["derive"] }

# Arkworks / BN254 field + serialization
ark-bn254     = { version = "0.5", default-features = false, features = ["curve"] }
ark-ff        = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }

# Groth16 verifying key type
ark-groth16   = { version = "0.5", default-features = false }

# Big integers for any bounds checks you might add later
num-bigint = "0.4"

# On-chain BN254 precompiles (not used yet, but fine to keep)
solana-bn254 = { version = "2", default-features = false }