[package]
name = "privacy-pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privacy_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = []
cpi = []
# zk-verify feature is DEPRECATED and MUST NOT be used to disable ZK verification
# ZK proof verification is unconditionally compiled in - this feature flag is kept for
# backwards compatibility only and has no effect on verification behavior
zk-verify = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = []
localnet = []

[dependencies]
indexmap = { workspace = true }
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

light-hasher = { version = "5", default-features = false }
bytemuck = { version = "1.20.0", features = ["min_const_generics"] }

ark-bn254 = { version = "0.5" }
ark-ff = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }

num-bigint = "0.4"
solana-bn254 = { version = "2", default-features = false }
proc-macro2 = "=1.0.94"
